objects/bofc__BOFCAuditHistory__c.object
<CustomObject>
    <fields>
        <fullName>bofc__Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open_Featured_Page</fullName>
                    <label>Open Featured Page</label>
                </value>
                <value>
                    <fullName>Click the Button</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bofc__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__Feature__c</fullName>
        <label>Feature</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clone_Object</fullName>
                    <label>Clone Object</label>
                </value>
                <value>
                    <fullName>Clone Fields</fullName>
                </value>
                <value>
                    <fullName>Clone Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>BOFCAuditHistory</label>
    <nameField>
        <label>BOFCAuditHistory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFCAuditHistorys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>